# harness-bench

./: .gitignore  README.md  RUBRIC_BUGS.md  pyproject.toml  report_final.py
config/: app.yaml  harness.example.yaml  models.example.yaml
grading/: default_rubric.py
src/clawbench_v2/: config.py  process_grading.py  registry.py  runner.py  tasks.py
src/harnessbench/: __init__.py  cli.py  config.py  extract_proxy_trace.py  models.py  registry.py  runner.py  tasks.py  usage_proxy.py
tasks/001-file/: oracle_grade.py  prompt.txt  task.yaml
tasks/002-exec/: llm_rubric.py  oracle_grade.py  prompt.txt  task.yaml
tasks/003-browser/: hooks.py  llm_rubric.py  oracle_grade.py  prompt.txt  task.yaml
tasks/004-meeting-summary/: ground_truth.json  llm_rubric.py  oracle_grade.py  prompt.txt  task.yaml  verify_oracle.py
tasks/005-email-triage/: ground_truth.json  llm_rubric.py  oracle_grade.py  prompt.txt  task.yaml  verify_oracle.py
tasks/006-access-bilibili/: ground_truth.json  hooks.py  llm_rubric.py  oracle_grade.py  prompt.txt  task.yaml  verify_oracle.py
tasks/007-session-memory/: check_round1_no_leak.py  ground_truth.json  hooks.py  llm_rubric.py  oracle_grade.py  prompt_round1.txt  prompt_round2.txt  task.yaml  verify_oracle.py
tasks/008-image-recognize/: ground_truth.json  hooks.py  llm_rubric.py  oracle_grade.py  prompt.txt  task.yaml
tasks/009-git-pr-merge/: ground_truth.json  hooks.py  llm_rubric.py  oracle_grade.py  prompt.txt  task.yaml  verify_oracle.py
tasks/010-office-docs/: ground_truth.json  llm_rubric.py  oracle_grade.py  prompt.txt  task.yaml  (+1 more)
(+979 files in other folders)
